--- a/foodPra/Base.lproj/Main.storyboard
+++ b/foodPra/Base.lproj/Main.storyboard
@@ -488,30 +488,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kV8-9d-nvM">
-                                <rect key="frame" x="0.0" y="97" width="414" height="77"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kV8-9d-nvM">
+                                <rect key="frame" x="0.0" y="97" width="412" height="78"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="412" id="ZnS-fo-SS9"/>
+                                    <constraint firstAttribute="height" constant="78" id="ppm-97-g1F"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <backgroundConfiguration key="background" image="쿠폰등록"/>
+                                </buttonConfiguration>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hgX-EF-yBf">
-                                <rect key="frame" x="25" y="205" width="365" height="161"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="쿠폰 광고" translatesAutoresizingMaskIntoConstraints="NO" id="hgX-EF-yBf">
+                                <rect key="frame" x="20" y="195" width="360" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="360" id="08f-G3-92n"/>
+                                    <constraint firstAttribute="height" constant="160" id="0Kq-Am-g5b"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kCn-gc-sR1">
-                                <rect key="frame" x="25" y="391" width="365" height="324"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5UV-Mx-n3Y">
-                                <rect key="frame" x="186" y="792" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="등록된 쿠폰이 없습니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5UV-Mx-n3Y">
+                                <rect key="frame" x="129" y="792" width="156" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="텅 글씨버전" translatesAutoresizingMaskIntoConstraints="NO" id="kCn-gc-sR1">
+                                <rect key="frame" x="111" y="492" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="PME-Ed-q8x"/>
+                                    <constraint firstAttribute="width" constant="200" id="ZCq-S2-81q"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1Xi-6H-cr7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="kV8-9d-nvM" firstAttribute="top" secondItem="1Xi-6H-cr7" secondAttribute="top" constant="9" id="F8E-3e-mPY"/>
+                            <constraint firstItem="kV8-9d-nvM" firstAttribute="leading" secondItem="1Xi-6H-cr7" secondAttribute="leading" id="JXh-Je-bpY"/>
+                            <constraint firstItem="1Xi-6H-cr7" firstAttribute="trailing" secondItem="kV8-9d-nvM" secondAttribute="trailing" constant="2" id="Njw-wl-KTe"/>
+                            <constraint firstItem="5UV-Mx-n3Y" firstAttribute="top" secondItem="kCn-gc-sR1" secondAttribute="bottom" constant="100" id="Zcg-L3-9gW"/>
+                            <constraint firstItem="5UV-Mx-n3Y" firstAttribute="leading" secondItem="1Xi-6H-cr7" secondAttribute="leading" constant="129" id="g45-sV-zY7"/>
+                            <constraint firstItem="kCn-gc-sR1" firstAttribute="top" secondItem="hgX-EF-yBf" secondAttribute="bottom" constant="137" id="i9g-CL-K2X"/>
+                            <constraint firstItem="1Xi-6H-cr7" firstAttribute="bottom" secondItem="5UV-Mx-n3Y" secondAttribute="bottom" id="lV2-eM-kmZ"/>
+                            <constraint firstItem="hgX-EF-yBf" firstAttribute="top" secondItem="kV8-9d-nvM" secondAttribute="bottom" constant="20" id="q0d-7d-YSz"/>
+                            <constraint firstItem="kCn-gc-sR1" firstAttribute="leading" secondItem="1Xi-6H-cr7" secondAttribute="leading" constant="111" id="xkd-fE-Qsi"/>
+                            <constraint firstItem="hgX-EF-yBf" firstAttribute="leading" secondItem="1Xi-6H-cr7" secondAttribute="leading" constant="20" id="yDf-aQ-H5X"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Coupon" id="0fE-nK-vce"/>
                 </viewController>
@@ -613,7 +635,7 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="텅" translatesAutoresizingMaskIntoConstraints="NO" id="PLH-mO-NK3">
-                                <rect key="frame" x="100" y="585" width="200" height="200"/>
+                                <rect key="frame" x="100" y="585" width="214" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="PLH-mO-NK3" secondAttribute="height" multiplier="200:200" id="K5k-MW-U1I"/>
                                     <constraint firstAttribute="width" constant="200" id="TPz-iG-rd7"/>
@@ -621,26 +643,26 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uGc-oG-2Uf">
-                                <rect key="frame" x="263" y="520" width="49" height="31"/>
+                                <rect key="frame" x="277" y="520" width="49" height="31"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="전체"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M0L-23-JE9">
-                                <rect key="frame" x="329" y="520" width="55" height="31"/>
+                                <rect key="frame" x="343" y="520" width="55" height="31"/>
                                 <color key="tintColor" red="0.075336097909999997" green="0.075209022520000002" blue="0.077428713110000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="1개월"/>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="배너" translatesAutoresizingMaskIntoConstraints="NO" id="jBp-IV-N44">
-                                <rect key="frame" x="-7" y="384" width="414" height="128"/>
+                                <rect key="frame" x="0.0" y="384" width="414" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="414" id="CwM-Gc-hKD"/>
                                     <constraint firstAttribute="height" constant="128" id="S1S-dC-rZR"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="포인트 상자가 비었습니다" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qag-Rk-rrQ">
-                                <rect key="frame" x="100" y="815" width="200" height="24"/>
+                                <rect key="frame" x="100" y="815" width="214" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -861,7 +883,10 @@
         <image name="square.split.2x2" catalog="system" width="128" height="114"/>
         <image name="ticket" catalog="system" width="128" height="84"/>
         <image name="배너" width="974" height="272"/>
+        <image name="쿠폰 광고" width="1056" height="486"/>
+        <image name="쿠폰등록" width="1093" height="200"/>
         <image name="텅" width="651" height="711"/>
+        <image name="텅 글씨버전" width="641" height="792"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
