tap -> navigator -> Like

--- a/foodPra/Base.lproj/Main.storyboard
+++ b/foodPra/Base.lproj/Main.storyboard
@@ -445,34 +445,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="G8B-pZ-cdL">
-                                <rect key="frame" x="0.0" y="88" width="414" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="G8B-pZ-cdL">
+                                <rect key="frame" x="0.0" y="88" width="414" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="0Rw-8T-LOR"/>
+                                    <constraint firstAttribute="width" constant="414" id="TP6-4h-E46"/>
+                                </constraints>
                                 <segments>
-                                    <segment title="First"/>
-                                    <segment title="Second"/>
-                                    <segment title=""/>
-                                    <segment title=""/>
+                                    <segment title="배달/포장"/>
+                                    <segment title="B마트"/>
+                                    <segment title="배민스토어"/>
+                                    <segment title="쇼핑라이브"/>
                                 </segments>
                             </segmentedControl>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B7Y-a7-CJu">
-                                <rect key="frame" x="12" y="126" width="382" height="198"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner03" translatesAutoresizingMaskIntoConstraints="NO" id="B7Y-a7-CJu">
+                                <rect key="frame" x="14" y="126" width="380" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="380" id="Fbv-IT-s2v"/>
+                                    <constraint firstAttribute="height" constant="200" id="Ns1-xd-ewy"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="텅" translatesAutoresizingMaskIntoConstraints="NO" id="y02-h2-DqA">
-                                <rect key="frame" x="12" y="376" width="382" height="412"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sen-eH-VWT">
-                                <rect key="frame" x="182" y="821" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="찜 목록이 비었습니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sen-eH-VWT">
+                                <rect key="frame" x="137" y="821.5" width="141" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="141" id="aoM-8u-pcM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="텅" translatesAutoresizingMaskIntoConstraints="NO" id="y02-h2-DqA">
+                                <rect key="frame" x="87" y="435" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="8gT-jE-RGe"/>
+                                    <constraint firstAttribute="height" constant="240" id="N8v-Go-FqK"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jx4-Xl-TEo"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="y02-h2-DqA" firstAttribute="top" secondItem="B7Y-a7-CJu" secondAttribute="bottom" constant="109" id="6Ik-5y-sjQ"/>
+                            <constraint firstItem="G8B-pZ-cdL" firstAttribute="top" secondItem="jx4-Xl-TEo" secondAttribute="top" id="9VR-ss-gol"/>
+                            <constraint firstItem="sen-eH-VWT" firstAttribute="leading" secondItem="jx4-Xl-TEo" secondAttribute="leading" constant="137" id="9jD-jT-B8i"/>
+                            <constraint firstItem="B7Y-a7-CJu" firstAttribute="top" secondItem="G8B-pZ-cdL" secondAttribute="bottom" constant="7" id="CHu-0M-M9Z"/>
+                            <constraint firstItem="y02-h2-DqA" firstAttribute="leading" secondItem="B7Y-a7-CJu" secondAttribute="trailing" constant="-307" id="EEL-bv-ryL"/>
+                            <constraint firstItem="B7Y-a7-CJu" firstAttribute="leading" secondItem="jx4-Xl-TEo" secondAttribute="leading" constant="14" id="RWk-ai-XWv"/>
+                            <constraint firstItem="G8B-pZ-cdL" firstAttribute="leading" secondItem="jx4-Xl-TEo" secondAttribute="leading" id="gWC-N9-Pv7"/>
+                            <constraint firstItem="jx4-Xl-TEo" firstAttribute="trailing" secondItem="y02-h2-DqA" secondAttribute="trailing" constant="87" id="h9R-eZ-45R"/>
+                            <constraint firstItem="sen-eH-VWT" firstAttribute="bottom" secondItem="jx4-Xl-TEo" secondAttribute="bottom" constant="29" id="oia-gk-9Vu"/>
+                            <constraint firstItem="y02-h2-DqA" firstAttribute="centerX" secondItem="jx4-Xl-TEo" secondAttribute="centerX" id="vD3-wr-pzz"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Like" id="jW1-GV-oSY"/>
                 </viewController>
@@ -635,7 +658,7 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="텅" translatesAutoresizingMaskIntoConstraints="NO" id="PLH-mO-NK3">
-                                <rect key="frame" x="100" y="585" width="214" height="200"/>
+                                <rect key="frame" x="100" y="585" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="PLH-mO-NK3" secondAttribute="height" multiplier="200:200" id="K5k-MW-U1I"/>
                                     <constraint firstAttribute="width" constant="200" id="TPz-iG-rd7"/>
@@ -643,26 +666,26 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uGc-oG-2Uf">
-                                <rect key="frame" x="277" y="520" width="49" height="31"/>
+                                <rect key="frame" x="263" y="520" width="49" height="31"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="전체"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M0L-23-JE9">
-                                <rect key="frame" x="343" y="520" width="55" height="31"/>
+                                <rect key="frame" x="329" y="520" width="55" height="31"/>
                                 <color key="tintColor" red="0.075336097909999997" green="0.075209022520000002" blue="0.077428713110000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="1개월"/>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="배너" translatesAutoresizingMaskIntoConstraints="NO" id="jBp-IV-N44">
-                                <rect key="frame" x="0.0" y="384" width="414" height="128"/>
+                                <rect key="frame" x="-7" y="384" width="414" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="414" id="CwM-Gc-hKD"/>
                                     <constraint firstAttribute="height" constant="128" id="S1S-dC-rZR"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="포인트 상자가 비었습니다" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qag-Rk-rrQ">
-                                <rect key="frame" x="100" y="815" width="214" height="24"/>
+                                <rect key="frame" x="100" y="815" width="200" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -874,6 +897,7 @@
     </scenes>
     <resources>
         <image name="0원" width="328" height="146"/>
+        <image name="banner03" width="909" height="510"/>
         <image name="bell" catalog="system" width="128" height="124"/>
         <image name="daneil_baedal05" width="292" height="190"/>
         <image name="daniel_baedal01" width="504" height="504"/>
@@ -911,6 +935,7 @@
         <image name="배너" width="974" height="272"/>
         <image name="쿠폰 광고" width="1056" height="486"/>
         <image name="쿠폰등록" width="1093" height="200"/>
+        <image name="텅" width="651" height="711"/>
         <image name="텅" width="651" height="711"/>
         <image name="텅 글씨버전" width="641" height="792"/>
         <systemColor name="systemBackgroundColor">
